--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ services:
 - docker
 language: bash
 script:
+# Get PostgreSQL Studio
+wget http://downloads.postgresqlstudio.org/2.0/pgstudio_2.0.zip -O pgstudio_2.0.zip
+unzip pgstudio_2.0.zip
 # prepare qemu
 - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 # build image
