--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ script:
 # Get PostgreSQL Studio
 - wget http://downloads.postgresqlstudio.org/2.0/pgstudio_2.0.zip -O pgstudio_2.0.zip
 - unzip pgstudio_2.0.zip
-# prepare qemu
-- docker run --rm --privileged multiarch/qemu-user-static:register --reset
+# ls
+- ls -ail
 # build image
 - docker build -t f4b1en/rpi-pgstudio .
 # push image
